--- a/style.css
+++ b/style.css
@@ -1,41 +1,53 @@
 * {
     box-sizing: border-box;
 }
-
 body {
     margin: 0;
     height: 100vh;
     width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
     font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: #555;
     background-color: #f6f6f6;
 }
-
 .login-div {
     width: 430px;
-    height: 600px;
+    height: 660px;
     padding: 60px 35px 35px 35px;
     border-radius: 40px;
     background-color: #ecf0f3;
     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
 }
-
+.logo {
+    background: url(./index.png);
+    background-position: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    box-shadow: 0px 0px 2px #5f5f5f, 0px 0px 0px 5px #ecf0f3,
+        8px 8px 15px #afaaa7, -8px -8px 15px #fff;
+}
 .title {
     text-align: center;
     font-size: 28px;
-    letter-spacing: 0.5px;
     padding-top: 24px;
+    letter-spacing: 0.5px;
 }
-
+.sub-title {
+    text-align: center;
+    font-size: 15px;
+    padding-top: 7px;
+    letter-spacing: 3px;
+}
 .fields {
     width: 100%;
     padding: 75px 5px 5px 5px;
 }
-
 .fields input {
     border: none;
     outline: none;
@@ -44,14 +56,12 @@ body {
     color: #555;
     padding: 20px 10px 20px 5px;
 }
-
 .username,
 .password {
+    /* margin-bottom: 30px; */
     border-radius: 25px;
-    margin-bottom: 30px;
     box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #fff;
 }
-
 .username-msg,
 .password-msg {
     font-size: 17px;
